--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Ian",
+  "author": "Jayant",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.14.1",
